[workspace]

resolver = "2"

members = [
    "tangu",
    "tangu-cli",
    "tangu-analysis",
    "tangu-lints",
    "tangu-language-server",
    "tangu-formatting",
]

[workspace.package]
version = "0.20.0"
edition = "2021"
license = "MPL-2.0"
authors = ["George Moschovitis <george.moschovitis@gmail.com>"]

[workspace.dependencies]
